# biotic-interactions

./: Makefile  mkdocs.yml  setup.cfg  setup.py
model/: CONFIG.yaml
model/schema/: interaction.yaml
tests/: test_input_against_model.py
