[metadata]
name = biotic_interactions
url = https://github.com/diatomsRcool/biotic-interactions
author = Anne Thessen
author_email = annethessen@gmail.com
summary = A biotic interaction model in LinkML for use with OntoGPT
description = A biotic interaction model in LinkML for use with OntoGPT
long_description = A biotic interaction model in LinkML for use with OntoGPT
home_page = https://diatomsRcool.github.io/biotic_interactions
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model
    biotic interactions

[options]
include_package_data = True

[files]
packages =
    biotic_interactions

data-files = biotic_interactions/model = biotic_interactions/model/*
    biotic_interactions/jsonld_context = biotic_interactions/jsonld_context/*
    biotic_interactions/json_schema = biotic_interactions/json_schema/*
    biotic_interactions/model = biotic_interactions/model/*


